--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.left.shothappy.TestActivity">
+
+    <TextView
+        android:id="@+id/word"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/word"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,23 +31,21 @@
             android:layout_weight="1"
             android:weightSum="2">
 
-            <Button
+            <ImageView
                 android:id="@+id/to_ar"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/button_background"
-                android:text="@string/title_ar" />
+                android:src="@drawable/button_background" />
 
-            <Button
+            <ImageView
                 android:id="@+id/to_thesaurus"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/button_background"
-                android:text="@string/title_thesaurus" />
+                android:src="@drawable/button_background" />
         </LinearLayout>
 
         <LinearLayout
@@ -47,55 +54,32 @@
             android:layout_weight="1"
             android:weightSum="2">
 
-            <Button
+            <ImageView
                 android:id="@+id/to_rateoflearning"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/button_background"
-                android:text="@string/title_rateoflearning" />
+                android:src="@drawable/button_background" />
 
-            <Button
+            <ImageView
                 android:id="@+id/to_test"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/button_background"
-                android:text="@string/title_test" />
+                android:src="@drawable/button_background" />
         </LinearLayout>
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <Button
+        android:layout_width="80dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/to_rank"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/share_app"
-            android:src="@drawable/like" />
-
-        <ImageView
-            android:id="@+id/share_app"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/to_setting"
-            android:src="@drawable/share" />
-
-        <ImageView
-            android:id="@+id/to_setting"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/setting" />
-    </RelativeLayout>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:background="@color/colorAccent"
+        android:text="@string/next" />
 
 </RelativeLayout>
