--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -74,6 +74,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/next"
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
