--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -176,16 +176,50 @@
                 </LinearLayout>
             </ScrollView>
         </LinearLayout>
-
     </android.support.v7.widget.CardView>
 
-    <ImageView
-        android:id="@+id/fab"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+
+    <LinearLayout
+        android:id="@+id/speak_tip_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:src="@drawable/mike" />
+
+        <ImageView
+            android:id="@+id/speak_over"
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:src="@drawable/speak_over" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin"
-        android:background="@drawable/speak" />
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/follow_speak_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/follow_speak"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/fab"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/speak" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/share_panel"
