--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -25,7 +25,7 @@
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/title" />
+            android:src="@drawable/title_ar" />
 
         <ImageView
             android:id="@+id/share"
