--- a/app/src/main/res/layout/activity_rateoflearning.xml
+++ b/app/src/main/res/layout/activity_rateoflearning.xml
@@ -29,7 +29,7 @@
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/title" />
+                android:src="@drawable/title_rateoflearning" />
 
             <ImageView
                 android:id="@+id/share"
