--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/card_box"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/card_box" />
+            android:src="@drawable/gift" />
 
         <LinearLayout
             android:layout_width="wrap_content"
