--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-    android:id="@+id/main_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/main_background"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+        android:id="@+id/main_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/main_background"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <ImageView
             android:id="@+id/card_box"
@@ -21,90 +21,93 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:weightSum="2">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
             android:weightSum="2">
 
-            <Button
-                android:id="@+id/to_ar"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginRight="10dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/ar_page" />
+                android:weightSum="2">
 
-            <Button
-                android:id="@+id/to_thesaurus"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginLeft="10dp"
+                <Button
+                    android:id="@+id/to_ar"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/ar_page" />
+
+                <Button
+                    android:id="@+id/to_thesaurus"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/thesaurus_page" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/thesaurus_page" />
+                android:weightSum="2">
+
+                <Button
+                    android:id="@+id/to_rateoflearning"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rateoflearning_page" />
+
+                <!-- 需要margintop一下，看上去好看点 -->
+                <Button
+                    android:id="@+id/to_test"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/test_page" />
+            </LinearLayout>
+
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:weightSum="2">
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/to_rateoflearning"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+            <ImageView
+                android:id="@+id/to_rank"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/rateoflearning_page" />
+                android:layout_toLeftOf="@+id/share_app"
+                android:src="@drawable/like" />
 
-            <Button
-                android:id="@+id/to_test"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/test_page" />
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/share_app"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/to_setting"
+                android:src="@drawable/share" />
 
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/to_rank"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/share_app"
-            android:src="@drawable/like" />
-
-        <ImageView
-            android:id="@+id/share_app"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/to_setting"
-            android:src="@drawable/share" />
-
-        <ImageView
-            android:id="@+id/to_setting"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/setting" />
+            <ImageView
+                android:id="@+id/to_setting"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/setting" />
+        </RelativeLayout>
     </RelativeLayout>
-</RelativeLayout>
 
     <FrameLayout
         android:id="@+id/card_panel"
