--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -23,13 +23,14 @@
 
         <ImageView
             android:layout_width="150dp"
-            android:layout_height="70dp"
+            android:layout_height="230dp"
+            android:layout_marginLeft="-10dp"
             android:src="@drawable/mike" />
 
         <ImageView
             android:id="@+id/speak_over"
             android:layout_width="150dp"
-            android:layout_height="70dp"
+            android:layout_height="75dp"
             android:src="@drawable/speak_over" />
     </LinearLayout>
 
@@ -49,8 +50,8 @@
 
         <ImageView
             android:id="@+id/fab"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:background="@drawable/speak" />
     </LinearLayout>
 
