--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/test_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/test_background"
+        android:background="@drawable/background"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -17,15 +18,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:text="@string/word"
             android:textColor="@color/colorAccent"
             android:textSize="25sp" />
 
+        <TextView
+            android:id="@+id/number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="60dp"
+            android:text="@string/word"
+            android:textColor="@color/colorGreen"
+            android:textSize="15sp" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="100dp"
             android:orientation="vertical"
             android:weightSum="2">
 
@@ -79,6 +91,6 @@
             android:layout_height="70dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/exit"></ImageView>
+            android:src="@drawable/game"></ImageView>
     </RelativeLayout>
 </FrameLayout>
